--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,10 @@ LazyData: true
 RoxygenNote: 7.1.1
 URL: https://github.com/bakenzua/bakenzutil
 BugReports: https://github.com/bakenzua/bakenzutil/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Imports: 
+    tidyr,
+    dplyr,
+    lubridate
