added theme_bakenzua_clean ggplot defaults

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,4 @@ export(fill_column_within_time_window)
 export(getSurvdiffPvalue)
 export(make2partSQLQueryWithList)
 export(medianIqrString)
+export(theme_bakenzua_clean)
