Polished documentation as per ROxygen generated suggestions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,4 @@ export(getSurvdiffPvalue)
 export(make2partSQLQueryWithList)
 export(medianIqrString)
 export(theme_bakenzua_clean)
+export(whichElemNotNumeric)
