--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,7 @@ export(fill_column_within_time_window)
 export(getSurvdiffPvalue)
 export(make2partSQLQueryWithList)
 export(medianIqrString)
+export(qqladder)
+export(qqladder_df)
 export(theme_bakenzua_clean)
 export(whichElemNotNumeric)
