some pseudoSTATA functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ export(age_calc)
 export(bracket_and_quote)
 export(classifyGasLabels)
 export(dateifyFilename)
+export(egof_table)
 export(fill_column_within_time_window)
 export(getSurvdiffPvalue)
+export(lm_diagnostic_ggplots)
 export(make2partSQLQueryWithList)
 export(medianIqrString)
 export(qqladder)
