tests and small changes for prettyprint_est_ci

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(get_survdiff_pvalue)
 export(lm_diagnostic_ggplots)
 export(make2part_SQL_query_with_list)
 export(median_iqr_string)
+export(prettyprint_est_ci)
 export(qqladder)
 export(qqladder_df)
 export(table_to_dataframe)
