Add bland_altman_plot with man page; export it and import dplyr::mutate and glue::glue in NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_icnarc_process_description)
 export(add_icnarc_site_description)
 export(add_icnarc_system_description)
 export(age_calc)
+export(bland_altman_plot)
 export(bracket_and_quote)
 export(check_icnarc_cmp_format)
 export(classify_gas_labels)
@@ -21,3 +22,5 @@ export(table_to_dataframe)
 export(theme_bakenzua_clean)
 export(which_elem_not_numeric)
 export(wilson_ci)
+importFrom(dplyr,mutate)
+importFrom(glue,glue)
